# Streakvelocitymeasurement

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  FRAME_DUMPER_SUMMARY.md  HANDOFF_SUMMARY.md  INSTALLATION_GUIDE.md  QUICK_START.txt  README.md  README_FRAME_DUMPER.md  RUN_GUIDE.md  START_HERE.md  build.gradle  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data.csv
app/src/main/java/com/example/highfps/: AnalysisActivity.java  BleSensorManager.java  CameraInfoFormatter.java  CameraPreviewView.java  CsvLoader.java  ExportStorageHelper.java  FpsSelector.java  FrameProcessor.java  FrameSaver.java  LiveBleDataBus.java  MainActivity.java  MediaActivity.java  PreviewCallback.java  ResultsActivity.java  ResultsPagerAdapter.java  SensorCsvLoader.java  SensorEntryActivity.java  SessionPathManager.java  SessionResultManager.java  StorageManager.java  StreakVideoExporter.java  VectorData.java  VectorFieldView.java  (+1 more)
app/src/main/res/drawable/: ic_archive.xml  ic_highfps_recorder.xml  ic_highfps_recorder_background.xml
app/src/main/res/layout/: activity_analysis.xml  activity_main.xml  activity_results.xml  activity_sensor_data_viewer.xml  item_sensor_data.xml  item_session_folder.xml  page_sensor_charts.xml  page_vector_field.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-sw360dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
(+29 files in other folders)
